<?xml version="1.0"?>
<package format="2">
  <name>dynamixel_controller</name>
  <version>0.0.1</version>
  <description>
    This package processes the values of the encoder and calculates an angle.
    After filtering and offset correcting the signal, a force estimate is calculated.
    In the end, the adjusting command values are send to the Dynamixel servo to exert a desired force.
  </description>

  <maintainer email="lschai@student.ethz.ch">Leonard Schai</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>angles</depend>
  <depend>std_msgs</depend>
  <depend>roslib</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>tf2</depend>
  <depend>tf</depend>


</package>
